# prole

./: .releaserc  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  version.sh
.github/workflows/: build-publish.yml
src/: error.rs  lib.rs
src/genome/: fasta_file.rs  genome_id.rs  mod.rs
src/gtdb/: genome_dirs_file.rs  metadata_r214.rs  mod.rs  taxon.rs  taxonomy.rs  taxonomy_rank.rs
src/hmm/: hmmalign_file.rs  hmmsearch_file.rs  mod.rs  pypfam_file.rs
src/phylorank/: mod.rs  red.rs  red_dict.rs
src/sequence/: mod.rs  tln_table.rs  translate.rs
src/util/: logging.rs
